--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,8 +6,9 @@ body{
 }
 
 nav{
-    width: 90%;
+    max-width: 1250px;
     min-height: 100px;
+    padding: 2rem;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -23,50 +24,60 @@ nav{
         padding: 7px;
     }
 
-    ul{
-        display: flex;
-        list-style: none;
+    .navi{
+        position: relative;
 
-        .active a{
-            font-weight: 700;
-        }
-
-        li{
-            padding-right: 86px;
-
-            &:nth-child(4){
-                padding-right: 0;
-            }
+        ul{
+            display: flex;
+            list-style: none;
             
-            a{
-                font-family: Montserrat;
-                font-size: 18px;
-                text-decoration: none;
-                font-weight: 500;
-                color: #fff;
+
+            .active a{
+                font-weight: 700;
             }
-        }
-   }
+
+            li{
+                padding-right: 86px;
+
+                &:nth-child(4){
+                    padding-right: 0;
+                }
+                
+                a{
+                    font-family: Montserrat;
+                    font-size: 18px;
+                    text-decoration: none;
+                    font-weight: 500;
+                    color: #fff;
+                }
+            }
+        } 
+    }
+
+    .hidden {
+        display: none;
+    }
 }
 
 // Main Section
 
 main{
-    padding:60px;
+    max-width: 1250px;
+    padding: 2rem;
+    margin: 0 auto;
     display: flex;
-    align-items: center;
+    // align-items: center;
     justify-content: space-between;
-    min-height: 100vh;
-    overflow: hidden;
+    // min-height: 100vh;
        
     .left{
-        width: 45%;
+        width: 40%;
         height: 587px;
     
 
         .title{
             font-family: Lora;
-            font-size: 48px;
+            font-size: 3rem;
             color: #fff;
             font-weight: 400;
         }
@@ -75,9 +86,9 @@ main{
             font-family: Montserrat;
             font-style: normal;
             font-weight: 300;
-            font-size: 24px;
+            font-size: 1.5rem;
             color: #fff;
-            max-width: 75%;
+            // max-width: 75%;
         }
 
         .title-desc a{
@@ -86,8 +97,9 @@ main{
             font-weight: 600;
             font-size: 18px;
             text-decoration: none;
+            padding-right: 10px;
 
-            .fas{
+            .fa-long-arrow-right{
                 color: #fff;
             }
         }
@@ -96,12 +108,138 @@ main{
 
     .right{
         width: 55%;
-        height: 587px;
         position: relative;
+        // margin-bottom: 10px;
 
         img{
             width: 100%;
-            height: auto;
+            display: block;
+            
+        }
+
+        .card{
+            position: absolute;
+            bottom: 0%;
+            right: 20px;
+            width: 410px;
+            background-color: #181719;
+            padding: 10px;
+            box-shadow: 0 1rem 1.5rem rgba(0, 0, 0,0.6);
+            
+            .card-details{
+                display: flex;
+            
+                img{
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 50%;
+                }
+
+                .card-detail{
+                    margin-left: 20px;
+                    h1{
+                        font-family: Montserrat;
+                        font-weight: 500;
+                        font-size: 14px;
+                        color: #FFFFFF;
+                    }
+
+                    h2{
+                        font-family: Montserrat;
+                        font-weight: 500;
+                        font-size: 12px;
+                        color: #828282;
+                    }
+                }
+            }
+
+            p{
+                font-family: Lora;
+                font-weight: bold;
+                font-size: 24px;
+                color: #FFFFFF;
+                max-width: 60%;
+            }
         }
     }
+}
+
+// Footer
+footer{
+    margin-top: 70px;
+    p{
+        font-family: Montserrat;
+        font-weight: 600;
+        font-size: 14px;
+        color: #A9A9A9;
+        text-align: center;
+    }
+}
+// Media Queries
+
+$breakpoint-tablet: 910px;
+@media (max-width: $breakpoint-tablet) {
+
+   nav {
+    padding: 0 2rem;
+        .navi{
+            .links{
+                display: none;
+                &.cross{
+                    position: fixed;
+                    display: flex;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100%;
+                    background-color: #181719;
+                    z-index: 20;
+                    flex-direction: column;
+                    align-items: center;
+                    padding: 0;
+                    margin: 0;
+
+                    li{
+                       justify-content: center;
+                       padding: 25px 0; 
+                       margin-top: 80px;
+                    }
+                }
+            }
+        }
+        .hidden{
+            display: block;
+            color: #fff;
+           
+        }
+   }
+
+   main{
+       flex-direction: column;
+       padding: 40px;
+       margin-bottom: 20px;
+
+       .left{
+           width: 100%;
+           height: 250px;
+
+           .title-desc p{
+               font-size: 20px;
+           }
+       }
+
+       .right{
+           width: 100%;
+
+           .card{
+            bottom: -15%;
+            right: 35px;
+            width: 320px;
+
+            p{
+                font-size: 18px;
+            }
+           }        
+       }
+   }
 }
