--- a/styles/style.scss
+++ b/styles/style.scss
@@ -72,7 +72,7 @@ main{
        
     .left{
         width: 40%;
-        height: 587px;
+        
     
 
         .title{
@@ -119,11 +119,11 @@ main{
 
         .card{
             position: absolute;
-            bottom: 0%;
+            bottom: -16%;
             right: 20px;
-            width: 410px;
+            width: 390px;
             background-color: #181719;
-            padding: 10px;
+            padding: 20px;
             box-shadow: 0 1rem 1.5rem rgba(0, 0, 0,0.6);
             
             .card-details{
@@ -159,6 +159,7 @@ main{
                 font-size: 24px;
                 color: #FFFFFF;
                 max-width: 60%;
+                margin: 15px 0 0 0;
             }
         }
     }
@@ -166,7 +167,9 @@ main{
 
 // Footer
 footer{
+
     margin-top: 70px;
+   
     p{
         font-family: Montserrat;
         font-weight: 600;
@@ -176,8 +179,7 @@ footer{
     }
 }
 // Media Queries
-
-$breakpoint-tablet: 910px;
+$breakpoint-tablet: 966px;
 @media (max-width: $breakpoint-tablet) {
 
    nav {
@@ -210,18 +212,22 @@ $breakpoint-tablet: 910px;
         .hidden{
             display: block;
             color: #fff;
-           
+            z-index: 22;
         }
    }
 
    main{
-       flex-direction: column;
+    //    flex-direction: column;
        padding: 40px;
        margin-bottom: 20px;
 
        .left{
            width: 100%;
            height: 250px;
+
+           .title{
+               font-size: 2.7rem;
+           }
 
            .title-desc p{
                font-size: 20px;
@@ -232,9 +238,9 @@ $breakpoint-tablet: 910px;
            width: 100%;
 
            .card{
-            bottom: -15%;
             right: 35px;
-            width: 320px;
+            width: 260px;
+            bottom: -25%;
 
             p{
                 font-size: 18px;
@@ -242,4 +248,33 @@ $breakpoint-tablet: 910px;
            }        
        }
    }
+}
+
+$breakpoint-phone: 768px;
+@media (max-width: $breakpoint-phone) {
+    main{
+        flex-direction: column;
+        .right{
+            .card{
+                bottom: -15%;
+                width: 54%;
+               
+            }
+        }
+    }
+}
+
+$breakpoint-small:537px;
+@media (max-width: $breakpoint-small) {
+    main{
+        .right{
+            .card{
+                width: 60%;
+                p{
+                    margin: 12px 0 0 0;
+                    max-width: 70%;
+                }
+            }
+        }
+    }
 }
